@@ -107,7 +107,7 @@ int main (gint argc, char *argv[])
     debug_logger_add_domain(logger, "Telnet", FALSE);
 
     /* Turn on colored output in logger */
-    g_object_set(logger, "use_color", TRUE, NULL);
+    g_object_set(logger, "use-color", TRUE, NULL);
 
     g_critical("Foobar");
     g_warning("Barfoo");
